UPDATE: BlogPost endpoint with test, seeder, etc
