# routes/api.php
@@ -11,6 +11,8 @@ use App\Http\Controllers\User\DeleteController;
 use App\Http\Controllers\User\ForgotPasswordController;
 use App\Http\Controllers\User\ResetPasswordController;
 use App\Http\Controllers\MainPage\PromotionsController;
+use App\Http\Controllers\MainPage\BlogPostsController;
+use App\Http\Controllers\MainPage\BlogPostController;
 
 Route::prefix('v1')->group(function () {
     // USER GROUPED ROUTES
@@ -31,5 +33,7 @@ Route::prefix('v1')->group(function () {
     // MAIN-PAGE GROUPED ROUTES
     Route::prefix('main')->group(function () {
         Route::get('/promotions', PromotionsController::class)->name('main.promotions');
+        Route::get('/blog', BlogPostsController::class)->name('main.blog');
+        Route::get('/blog/{uuid}', BlogPostController::class)->name('main.blog.view');
     });
 });
